--- a/Nieuwe map/demo/src/main/resources/application.properties
+++ b/Nieuwe map/demo/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql= true
 spring.datasource.driverClassName=org.postgresql.Driver
+
+
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
