--- a/Nieuwe map/demo/src/main/resources/application.properties
+++ b/Nieuwe map/demo/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql= true
 spring.datasource.driverClassName=org.postgresql.Driver
 
-bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtSecret= mvlSecurity
 bezkoder.app.jwtExpirationMs= 86400000
